add structure learning graphs to notebook

--- a/notebooks/Structure_learning_bank_marketing.ipynb
+++ b/notebooks/Structure_learning_bank_marketing.ipynb
@@ -225,29 +225,91 @@
     "from model.inference import *\n",
     "from model.parameter import *\n",
     "from model.structure import *\n",
+    "from pyvis.network import Network\n",
+    "from pgmpy.estimators.CITests import chi_square\n",
+    "\n",
     "\n",
     "#classification_datasets.BankMarketing('../data/')  --- stores Bank marketing dataset in local folder\n",
     "\n",
     "df = pd.read_csv('../data/BankMarketing/bank-additional/bank-additional-full.csv', sep=';')\n",
-    "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "fa217be3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 41188 entries, 0 to 41187\n",
+      "Data columns (total 20 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   age             41188 non-null  int64  \n",
+      " 1   job             41188 non-null  object \n",
+      " 2   marital         41188 non-null  object \n",
+      " 3   education       41188 non-null  object \n",
+      " 4   default         41188 non-null  object \n",
+      " 5   housing         41188 non-null  object \n",
+      " 6   loan            41188 non-null  object \n",
+      " 7   contact         41188 non-null  object \n",
+      " 8   month           41188 non-null  object \n",
+      " 9   day_of_week     41188 non-null  object \n",
+      " 10  campaign        41188 non-null  int64  \n",
+      " 11  pdays           41188 non-null  int64  \n",
+      " 12  previous        41188 non-null  int64  \n",
+      " 13  poutcome        41188 non-null  object \n",
+      " 14  emp.var.rate    41188 non-null  float64\n",
+      " 15  cons.price.idx  41188 non-null  float64\n",
+      " 16  cons.conf.idx   41188 non-null  float64\n",
+      " 17  euribor3m       41188 non-null  float64\n",
+      " 18  nr.employed     41188 non-null  float64\n",
+      " 19  y               41188 non-null  object \n",
+      "dtypes: float64(5), int64(4), object(11)\n",
+      "memory usage: 6.3+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "# we should drop call duration as it has 1-1 relationship with target\n",
     "\n",
-    "df = df.drop('duration', axis=1)\n"
+    "#df = df.drop('duration', axis=1)\n",
+    "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
+   "id": "9a28b04b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "discrete_cols = ['age', 'job', 'marital', 'education', 'default', 'housing', 'loan',\n",
+    "       'contact', 'month', 'day_of_week', 'campaign', 'pdays', 'previous',\n",
+    "       'poutcome',  'y']\n",
+    "\n",
+    "cont_cols = ['emp.var.rate', 'cons.price.idx', 'cons.conf.idx',\n",
+    "       'euribor3m', 'nr.employed']\n",
+    "\n",
+    "struct = StructureLearning(df.loc[:, discrete_cols])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b2e99c2",
+   "metadata": {},
+   "source": [
+    "#### Structured Learning Hill Climbing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "cbe3b2f3",
    "metadata": {
     "scrolled": true
@@ -257,71 +319,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "  0%|                                               | 0/1000000 [00:00<?, ?it/s]\u001b[A\n",
-      "  0%|                                  | 1/1000000 [00:12<3468:48:32, 12.49s/it]\u001b[A\n",
-      "  0%|                                  | 2/1000000 [00:13<1539:58:26,  5.54s/it]\u001b[A\n",
-      "  0%|                                   | 3/1000000 [00:14<965:51:19,  3.48s/it]\u001b[A\n",
-      "  0%|                                   | 4/1000000 [00:14<657:05:01,  2.37s/it]\u001b[A\n",
-      "  0%|                                   | 5/1000000 [00:15<482:34:18,  1.74s/it]\u001b[A\n",
-      "  0%|                                   | 6/1000000 [00:16<376:20:05,  1.35s/it]\u001b[A\n",
-      "  0%|                                   | 7/1000000 [00:16<332:17:11,  1.20s/it]\u001b[A\n",
-      "  0%|                                   | 8/1000000 [00:17<282:20:26,  1.02s/it]\u001b[A\n",
-      "  0%|                                   | 9/1000000 [00:18<246:49:50,  1.13it/s]\u001b[A\n",
-      "  0%|                                  | 10/1000000 [00:18<230:46:54,  1.20it/s]\u001b[A\n",
-      "  0%|                                  | 11/1000000 [00:19<210:45:46,  1.32it/s]\u001b[A\n",
-      "  0%|                                  | 12/1000000 [00:20<203:32:23,  1.36it/s]\u001b[A\n",
-      "  0%|                                  | 13/1000000 [00:23<423:43:55,  1.53s/it]\u001b[A\n",
-      "  0%|                                  | 14/1000000 [00:24<347:26:26,  1.25s/it]\u001b[A\n",
-      "  0%|                                  | 15/1000000 [00:24<293:19:51,  1.06s/it]\u001b[A\n",
-      "  0%|                                  | 16/1000000 [00:25<257:50:19,  1.08it/s]\u001b[A\n",
-      "  0%|                                  | 17/1000000 [00:26<238:43:45,  1.16it/s]\u001b[A\n",
-      "  0%|                                  | 18/1000000 [00:26<230:21:10,  1.21it/s]\u001b[A\n",
-      "  0%|                                  | 19/1000000 [00:27<206:18:26,  1.35it/s]\u001b[A\n",
-      "  0%|                                  | 20/1000000 [00:28<240:14:55,  1.16it/s]\u001b[A\n",
-      "  0%|                                  | 21/1000000 [00:29<233:04:46,  1.19it/s]\u001b[A\n",
-      "  0%|                                  | 22/1000000 [00:30<225:26:54,  1.23it/s]\u001b[A\n",
-      "  0%|                                  | 23/1000000 [00:30<208:48:45,  1.33it/s]\u001b[A\n",
-      "  0%|                                  | 24/1000000 [00:31<215:52:36,  1.29it/s]\u001b[A\n",
-      "  0%|                                  | 25/1000000 [00:38<764:19:19,  2.75s/it]\u001b[A\n",
-      "  0%|                                  | 26/1000000 [00:39<587:28:17,  2.11s/it]\u001b[A\n",
-      "  0%|                                  | 27/1000000 [00:40<473:40:16,  1.71s/it]\u001b[A\n",
-      "  0%|                                  | 28/1000000 [00:42<418:19:20,  1.51s/it]\u001b[A\n"
+      "  0%|                                                                                     | 28/1000000 [00:22<226:38:56,  1.23it/s]\n"
      ]
     }
    ],
    "source": [
     "# Structure learning on the data set\n",
     "\n",
-    "struct = StructureLearning(df)\n",
-    "model1 = struct.score_based(scoring=\"bic\", algo=\"hc\")\n",
-    "\n",
-    "#model2 = struct.constraint_based()"
+    "model_hc = struct.score_based(scoring=\"bic\", algo=\"hc\")\n",
+    "#model_pc  = struct.constraint_based()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "id": "c8b1b5c2",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyvis.network import Network\n",
-    "net = Network(notebook=True)\n",
-    "net.from_nx(model)\n",
-    "\n",
-    "net.show_buttons(filter_=['physics'])\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "24bcdc38",
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
      "data": {
@@ -330,37 +343,194 @@
        "        <iframe\n",
        "            width=\"500px\"\n",
        "            height=\"500px\"\n",
-       "            src=\"structure_bank_marketing.html\"\n",
+       "            src=\"outputs/structure_hc.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fd18fc75f70>"
+       "<IPython.lib.display.IFrame at 0x7f2efd40bca0>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "net.show('structure_bank_marketing.html')"
+    "\n",
+    "net = Network(notebook=True, directed=True)\n",
+    "net.from_nx(model_hc)\n",
+    "net.show_buttons(filter_=['physics'])\n",
+    "net.show('outputs/structure_hc.html')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4e2ca1a",
+   "metadata": {},
+   "source": [
+    "#### Structured Learning Tree based - Chow Liu "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7f50f928",
+   "execution_count": 9,
+   "id": "cd16d5b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building tree: 100%|███████████████████████████████████████████████████████████████████████████| 105/105.0 [00:05<00:00, 19.30it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_tree = struct.score_based(root_node='age', algo=\"tree\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "4a18260a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"500px\"\n",
+       "            height=\"500px\"\n",
+       "            src=\"outputs/structure_tree.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f2efd44afa0>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "net = Network(notebook=True, directed=True)\n",
+    "net.from_nx(model_tree)\n",
+    "net.show_buttons(filter_=['physics'])\n",
+    "net.show('outputs/structure_tree.html')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6727e56",
+   "metadata": {},
+   "source": [
+    "#### Structured Learning constraint based"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69c0e8c2",
+   "metadata": {},
+   "source": [
+    "conditional independence tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "de412141",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "z = ['housing', 'loan','day_of_week', 'campaign', 'previous']\n",
+    "\n",
+    "chi_square(X='age', Y='y', Z=z, data=df, boolean=True, significance_level=0.05)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4bf3478d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = ['day_of_week']\n",
+    "\n",
+    "chi_square(X='campaign', Y='poutcome', Z=z, data=df, boolean=True, significance_level=0.05)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2cd968c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = ['month']\n",
+    "\n",
+    "chi_square(X='campaign', Y='poutcome', Z=z, data=df, boolean=True, significance_level=0.05)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c5ab6219",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "#from pgmpy.estimators import PC\n",
+    "#c = PC(df.loc[:, discrete_cols])\n",
+    "#model = c.estimate(variant='parallel', max_cond_vars=5)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bayes",
+   "display_name": "Python3.9 Bayesian Graphs",
    "language": "python",
    "name": "bayes"
   },
@@ -374,7 +544,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
