--- a/notebooks/Structure_learning_bank_marketing.ipynb
+++ b/notebooks/Structure_learning_bank_marketing.ipynb
@@ -218,21 +218,7 @@
     }
    ],
    "source": [
-    "\n",
-    "import os\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from model.inference import *\n",
-    "from model.parameter import *\n",
-    "from model.structure import *\n",
-    "from pyvis.network import Network\n",
-    "from pgmpy.estimators.CITests import chi_square\n",
-    "\n",
-    "\n",
-    "#classification_datasets.BankMarketing('../data/')  --- stores Bank marketing dataset in local folder\n",
-    "\n",
-    "df = pd.read_csv('../data/BankMarketing/bank-additional/bank-additional-full.csv', sep=';')\n",
-    "df.head()"
+    "e"
    ]
   },
   {
@@ -530,7 +516,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3.9 Bayesian Graphs",
+   "display_name": "bayes",
    "language": "python",
    "name": "bayes"
   },
@@ -544,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
